--- a/src/html/home/home_frm.html
+++ b/src/html/home/home_frm.html
@@ -606,21 +606,21 @@ function openWinInsure(){
 
 
 function openWinNotice(){
-    /*tea.openWin({
+    tea.openWin({
         name: 'saler_index_win',
         url: '../saler/saler_index_win.html',
         pageParam: {
             name: 'test'
         }
-    });*/
-    tea.openWin({
-        name: 'message_center_win',
-        url: '../notice/message_center_win.html',
-        bounces: false,
-        pageParam: {
-            key: 'value'
-        }
     });
+    // tea.openWin({
+    //     name: 'message_center_win',
+    //     url: '../notice/message_center_win.html',
+    //     bounces: false,
+    //     pageParam: {
+    //         key: 'value'
+    //     }
+    // });
 }
 
 function openWinNews(){
